@@ -78,15 +78,15 @@ AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
 dnl
 dnl Start of pkg-config checks
 dnl
-PKG_CHECK_MODULES(DAEMON, glib-2.0 gthread-2.0)
+PKG_CHECK_MODULES(DAEMON, glib-2.0)
 AC_SUBST(DAEMON_CFLAGS)
 AC_SUBST(DAEMON_LIBS)
 
-PKG_CHECK_MODULES(LIBGAMIN, glib-2.0 gthread-2.0)
+PKG_CHECK_MODULES(LIBGAMIN, glib-2.0)
 AC_SUBST(LIBGAMIN_LIBS)
 AC_SUBST(LIBGAMIN_CFLAGS)
 
-PKG_CHECK_MODULES(TEST, glib-2.0 gthread-2.0)
+PKG_CHECK_MODULES(TEST, glib-2.0)
 AC_SUBST(TEST_LIBS)
 AC_SUBST(TEST_CFLAGS)
 
